myteo/test/parser/comment/unterminated_block.exp
Error: Unexpected <EOF>
test/parser/comment/unterminated_block.myte:3:2
 3 | /*
   |   ^